--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "eslint": "^8.52.0",
     "eslint-config-universe": "^12.0.0",
     "jest": "^29.7.0",
+    "nativewind": "^2.0.11",
     "prettier": "^3.0.3",
+    "tailwindcss": "3.3.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.3"
   },
