--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "types": ["jest"]
+    "types": ["jest"],
+    "strict": true
   },
   "include": ["**/*.test.tsx"]
 }
