--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
     "prettier": "prettier . --write",
@@ -21,7 +21,8 @@
     "react-native": "0.72.6",
     "react-navigation": "^5.0.0",
     "react-query": "^3.39.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -36,6 +37,11 @@
     "tailwindcss": "3.3.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.3"
+  },
+  "expo": {
+    "autolinking": {
+      "nativeModulesDir": "./packages"
+    }
   },
   "private": true
 }
