--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
     "prettier": "prettier . --write",
@@ -21,7 +21,11 @@
     "react-native": "0.72.6",
     "react-navigation": "^5.0.0",
     "react-query": "^3.39.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "expo-splash-screen": "~0.20.5",
+    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
